--- a/module-02/lesson-11/basic-auth/package.json
+++ b/module-02/lesson-11/basic-auth/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "hbs": "^4.2.0",
     "mongoose": "^8.4.3",
     "morgan": "^1.10.0",
